snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
2f4224372bd515c02e86bf76620f887c42d9f0bbb23548a2f348eebd8bd4af25